--- a/about-us.html
+++ b/about-us.html
@@ -16,7 +16,7 @@
          </div>
       </div>
    </div>
-   <div class="parallax" id="parallax-cta" style="background-image:url(https://www.solodev.com/assets/hero/hero.jpg);">
+   <div class="parallax" id="parallax-cta" style="background-image:url(images/hero.jpg);">
       &nbsp;
    </div>
 </section>
@@ -123,7 +123,7 @@
             </div>
          </div>
       </div>
-      <a class="ct-u-marginTop60 btn btn-solodev-red-reversed btn-fullWidth-sm ct-u-size19" href="/careers/">Ready to Learn More?</a>
+      <a class="ct-u-marginTop60 btn btn-solodev-red-reversed btn-fullWidth-sm ct-u-size19" href="/">Ready to Learn More?</a>
    </div>
 </section>
 <section class="customers-section company-sections ct-u-paddingBoth100 paddingBothHalf noTopMobilePadding">
@@ -154,7 +154,7 @@
                      <!-- starting row div -->
                      <div class="row">
                         <div class="col-md-4 client-logos-repeater">
-                           <a href="/path/to/detail/zeina.html" class="Zeina"><img alt="https://www.solodev.com/assets/clients/logo-zeina.png" src="https://www.solodev.com/assets/clients/logo-zeina.png"></a>
+                           <a href="/path/to/detail/zeina.html" class="Zeina"><img alt="images/logo-zeina.png" src="images/logo-zeina.png"></a>
                            <div class="logo-title">
                               <div class="displayTable">
                                  <div class="displayTableCell">
@@ -164,7 +164,7 @@
                            </div>
                         </div>
                         <div class="col-md-4 client-logos-repeater">
-                           <a href="/path/to/detail/logic.html" class="Logic"><img alt="https://www.solodev.com/assets/clients/logic.png" src="https://www.solodev.com/assets/clients/logic.png"></a>
+                           <a href="/path/to/detail/logic.html" class="Logic"><img alt="images/logic.png" src="images/logic.png"></a>
                            <div class="logo-title">
                               <div class="displayTable">
                                  <div class="displayTableCell">
@@ -174,7 +174,7 @@
                            </div>
                         </div>
                         <div class="col-md-4 client-logos-repeater">
-                           <a href="/path/to/detail/smart.html" class="Smart"><img alt="https://www.solodev.com/assets/clients/client3.png" src="https://www.solodev.com/assets/clients/client3.png"></a>
+                           <a href="/path/to/detail/smart.html" class="Smart"><img alt="images/client3.png" src="images/client3.png"></a>
                            <div class="logo-title">
                               <div class="displayTable">
                                  <div class="displayTableCell">
@@ -186,7 +186,7 @@
                      </div>
                      <div class="row">
                         <div class="col-md-4 client-logos-repeater">
-                           <a href="/path/to/detail/softtech.html" class="Softtech"><img alt="https://www.solodev.com/assets/clients/softtech.png" src="https://www.solodev.com/assets/clients/softtech.png"></a>
+                           <a href="/path/to/detail/softtech.html" class="Softtech"><img alt="images/softtech.png" src="images/softtech.png"></a>
                            <div class="logo-title">
                               <div class="displayTable">
                                  <div class="displayTableCell">
@@ -196,7 +196,7 @@
                            </div>
                         </div>
                         <div class="col-md-4 client-logos-repeater">
-                           <a href="/path/to/detail/wheel.html" class="Wheel"><img alt="https://www.solodev.com/assets/clients/logo-target.png" src="https://www.solodev.com/assets/clients/logo-target.png"></a>
+                           <a href="/path/to/detail/wheel.html" class="Wheel"><img alt="images/logo-target.png" src="images/logo-target.png"></a>
                            <div class="logo-title">
                               <div class="displayTable">
                                  <div class="displayTableCell">
@@ -206,7 +206,7 @@
                            </div>
                         </div>
                         <div class="col-md-4 client-logos-repeater">
-                           <a href="/path/to/detail/3designs.html" class="3designs"><img alt="https://www.solodev.com/assets/clients/designx.png" src="https://www.solodev.com/assets/clients/designx.png"></a>
+                           <a href="/path/to/detail/3designs.html" class="3designs"><img alt="images/designx.png" src="images/designx.png"></a>
                            <div class="logo-title">
                               <div class="displayTable">
                                  <div class="displayTableCell">
@@ -218,7 +218,7 @@
                      </div>
                      <div class="row">
                         <div class="col-md-4 client-logos-repeater">
-                           <a href="/path/to/detail/heart.html" class="Heart"><img alt="https://www.solodev.com/assets/clients/client7.png" src="https://www.solodev.com/assets/clients/client7.png"></a>
+                           <a href="/path/to/detail/heart.html" class="Heart"><img alt="images/client7.png" src="images/client7.png"></a>
                            <div class="logo-title">
                               <div class="displayTable">
                                  <div class="displayTableCell">
@@ -228,7 +228,7 @@
                            </div>
                         </div>
                         <div class="col-md-4 client-logos-repeater">
-                           <a href="/path/to/detail/devtech.html" class="Devtech"><img alt="https://www.solodev.com/assets/clients/devtech.png" src="https://www.solodev.com/assets/clients/devtech.png"></a>
+                           <a href="/path/to/detail/devtech.html" class="Devtech"><img alt="images/devtech.png" src="images/devtech.png"></a>
                            <div class="logo-title">
                               <div class="displayTable">
                                  <div class="displayTableCell">
@@ -238,7 +238,7 @@
                            </div>
                         </div>
                         <div class="col-md-4 client-logos-repeater">
-                           <a href="/path/to/detail/chartz.html" class="Chartz"><img alt="https://www.solodev.com/assets/clients/chartz.png" src="https://www.solodev.com/assets/clients/chartz.png"></a>
+                           <a href="/path/to/detail/chartz.html" class="Chartz"><img alt="images/chartz.png" src="images/chartz.png"></a>
                            <div class="logo-title">
                               <div class="displayTable">
                                  <div class="displayTableCell">
